test/files/neg/error-in-apply-args-1.scala
object O {
  def almostTupleAdapted(t2: (Int, String)): Unit = ()

  almostTupleAdapted(math.floor("not a num 1"), math.floor("not a num 2"))
}
