test/files/neg/error-in-apply-args-1.check
error-in-apply-args-1.scala:4: error: type mismatch;
 found   : String("not a num 1")
 required: Double
  almostTupleAdapted(math.floor("not a num 1"), math.floor("not a num 2"))
                                ^
error-in-apply-args-1.scala:4: error: type mismatch;
 found   : String("not a num 2")
 required: Double
  almostTupleAdapted(math.floor("not a num 1"), math.floor("not a num 2"))
                                                           ^
error-in-apply-args-1.scala:4: error: too many arguments (found 2, expected 2-tuple) for method almostTupleAdapted: (t2: (Int, String)): Unit
  almostTupleAdapted(math.floor("not a num 1"), math.floor("not a num 2"))
                                                          ^
3 errors
